fix header (z-index)

--- a/#source/sass/_burger.scss
+++ b/#source/sass/_burger.scss
@@ -5,6 +5,7 @@
   position: fixed;
   top: 0;
   background-color: #ECEFF1;
+  z-index: 50;
   @media (max-width: 767px) {
     display: block;
   }
